[package]
name = "lsm-engine"
version = "0.1.0"
edition = "2021"
description = "LSM-tree key-value store with learned index models replacing Bloom filters"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"



[[bench]]
name = "engine_bench"
harness = false
